# comfyui-model-linker

./: README.md  __init__.py  pyproject.toml
core/: __init__.py  downloader.py  linker.py  scanner.py  workflow_analyzer.py
core/sources/: __init__.py  civitai.py  huggingface.py  model_list.py  popular.py
metadata/: model-aliases.json  popular-models.json
web/: linker.js
